option java_package = "org.corfudb.format";

enum DataType {
    DATA = 0;
    EMPTY = 1;
    HOLE = 2;
    TRIMMED = 3;
    PROPOSAL = 4;
}

enum CheckpointEntryType {
    START = 0;
    CONTINUATION = 1;
    END = 2;
}

message DataRank {
    required int64 rank = 1;
    required int64 uuid_most_significant = 2;
    required int64 uuid_least_significant = 3;
}

message LogEntry {
    optional DataType data_type = 1;
    optional bytes data = 2;
    optional int64 global_address = 3;
    repeated string	streams = 6;
    map<string, int64> logical_addresses = 7;
    map<string, int64> backpointers = 8;
    optional DataRank rank = 9;
    optional CheckpointEntryType checkpointEntryType = 10;
    optional int64 checkpointId_most_significant = 11;
    optional int64 checkpointId_least_significant = 12;
    optional int64 checkpointedStreamId_most_significant = 13;
    optional int64 checkpointedStreamId_least_significant = 14;
    //  Tail of the stream at the time of taking the checkpoint snapshot.
    optional int64 checkpointedStreamStartLogAddress = 15;
}

message LogHeader {
    optional int32 version = 1;
    optional bool verify_checksum = 2;
}

message Metadata {
    optional sfixed32 checksum = 1;
    optional sfixed32 length = 2;
}

//  NodeMetrics is composed of the various metrics of a node
//  like the status of the different components, pending
//  requests in the log unit and tokens generated by the
//  sequencer on the node.
//  This is created in response to a heartbeat request by a
//  Management Server.
message NodeMetrics {

    //  Node endpoint (ip:port)
    optional string endpoint = 1;
    //  Status of the layout, sequencer and log unit servers.
    //  Boolean storing whether server is responding or not.
    optional bool layoutServerStatus = 2;
    optional bool sequencerServerStatus = 3;
    optional bool logunitServerStatus = 4;
}

message TrimEntry {
    optional int32 checksum = 1;
    optional int64 address = 2;
}
